[package]
license = "Apache-2.0"
name = "kigi-tools-api"
version.workspace = true
edition.workspace = true
description = "Protobuf API definitions for Kigi tools"

[dependencies]
tonic-prost = { workspace = true }
# Protobuf runtime
prost = { workspace = true }
tonic = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
kigi-tool-protocol = { workspace = true }

[build-dependencies]
kigi-proto-build = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["serde", "tonic"]

[lints]
workspace = true
