[package]
license = "Apache-2.0"
name = "kigi-update"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["fs", "process", "io-util", "macros", "time"] }
tracing = { workspace = true }
kigi-shell = { workspace = true }
kigi-env = { workspace = true }
kigi-tools = { workspace = true }
kigi-version = { workspace = true }

# Release archives: tar.gz on Unix, zip on Windows (PRD F8).
[target.'cfg(not(windows))'.dependencies]
flate2 = { workspace = true }
tar = { workspace = true }

[target.'cfg(windows)'.dependencies]
zip = { workspace = true }

[dev-dependencies]
flate2 = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "test-util"] }
wiremock = { workspace = true }
dunce = { workspace = true }
