[package]
license = "Apache-2.0"
name = "kigi-computer-hub-core"
version.workspace = true
edition.workspace = true
description = "Transport, ToolRegistry, and resolver abstractions for the xAI Computer Hub"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
kigi-tool-protocol = { workspace = true }
kigi-tool-runtime = { workspace = true }
kigi-tool-types = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "sync"] }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
